Ephemeral and Ceph-backed compute nodes (#29)
Heat template, build playbook, build script, group vars, ansible inventory and hosts file template supporting compute nodes.

Also fix issue where eth1 IPs might not have been populated to hosts file.

--- a/playbooks/build-heat-stack.yml
+++ b/playbooks/build-heat-stack.yml
@@ -43,6 +43,7 @@
         - "{{ heat_stack.stack.outputs[5].output_value }}"
         - "{{ heat_stack.stack.outputs[6].output_value }}"
         - "{{ heat_stack.stack.outputs[7].output_value }}"
+        - "{{ heat_stack.stack.outputs[8].output_value }}"
       when: item.metadata.ansible_group == "galera"
 
     - name: Add api nodes to inventory
@@ -61,6 +62,7 @@
         - "{{ heat_stack.stack.outputs[5].output_value }}"
         - "{{ heat_stack.stack.outputs[6].output_value }}"
         - "{{ heat_stack.stack.outputs[7].output_value }}"
+        - "{{ heat_stack.stack.outputs[8].output_value }}"
       when: item.metadata.ansible_group == "api"
 
     - name: Add obj nodes to inventory
@@ -79,6 +81,7 @@
         - "{{ heat_stack.stack.outputs[5].output_value }}"
         - "{{ heat_stack.stack.outputs[6].output_value }}"
         - "{{ heat_stack.stack.outputs[7].output_value }}"
+        - "{{ heat_stack.stack.outputs[8].output_value }}"
       when: item.metadata.ansible_group == "obj"
 
     - name: Add net nodes to inventory
@@ -97,6 +100,7 @@
         - "{{ heat_stack.stack.outputs[5].output_value }}"
         - "{{ heat_stack.stack.outputs[6].output_value }}"
         - "{{ heat_stack.stack.outputs[7].output_value }}"
+        - "{{ heat_stack.stack.outputs[8].output_value }}"
       when: item.metadata.ansible_group == "net"
 
     - name: Add Ceph mon nodes to inventory
@@ -115,6 +119,7 @@
         - "{{ heat_stack.stack.outputs[5].output_value }}"
         - "{{ heat_stack.stack.outputs[6].output_value }}"
         - "{{ heat_stack.stack.outputs[7].output_value }}"
+        - "{{ heat_stack.stack.outputs[8].output_value }}"
       when: item.metadata.ansible_group == "cephmon"
 
     - name: Add Ceph osd nodes to inventory
@@ -133,6 +138,7 @@
         - "{{ heat_stack.stack.outputs[5].output_value }}"
         - "{{ heat_stack.stack.outputs[6].output_value }}"
         - "{{ heat_stack.stack.outputs[7].output_value }}"
+        - "{{ heat_stack.stack.outputs[8].output_value }}"
       when: item.metadata.ansible_group == "cephosd"
 
     - name: Add puppet node to inventory
@@ -151,6 +157,7 @@
         - "{{ heat_stack.stack.outputs[5].output_value }}"
         - "{{ heat_stack.stack.outputs[6].output_value }}"
         - "{{ heat_stack.stack.outputs[7].output_value }}"
+        - "{{ heat_stack.stack.outputs[8].output_value }}"
       when: item.metadata.ansible_group == "puppet"
 
     - name: Add LDAP node to inventory
@@ -169,7 +176,27 @@
         - "{{ heat_stack.stack.outputs[5].output_value }}"
         - "{{ heat_stack.stack.outputs[6].output_value }}"
         - "{{ heat_stack.stack.outputs[7].output_value }}"
+        - "{{ heat_stack.stack.outputs[8].output_value }}"
       when: item.metadata.ansible_group == "ldap"
+
+    - name: Add computes node to inventory
+      add_host:
+        name: "{{ item.name }}"
+        groups: "{{ item.metadata.ansible_group }}"
+        ansible_ssh_host: "{{ item.addresses[magic_index_network.msg][0].addr }}"
+        ansible_ssh_user: "{{ vm_user_account }}"
+      no_log: yes
+      with_items:
+        - "{{ heat_stack.stack.outputs[0].output_value }}"
+        - "{{ heat_stack.stack.outputs[1].output_value }}"
+        - "{{ heat_stack.stack.outputs[2].output_value }}"
+        - "{{ heat_stack.stack.outputs[3].output_value }}"
+        - "{{ heat_stack.stack.outputs[4].output_value }}"
+        - "{{ heat_stack.stack.outputs[5].output_value }}"
+        - "{{ heat_stack.stack.outputs[6].output_value }}"
+        - "{{ heat_stack.stack.outputs[7].output_value }}"
+        - "{{ heat_stack.stack.outputs[8].output_value }}"
+      when: item.metadata.ansible_group == "compute"
 
     - name: Generate an inventory file
       template: src=templates/ooo_inventory.j2 dest="../inventory/ooo_inventory"
