--- a/playbooks/generate_hostsfile.yml
+++ b/playbooks/generate_hostsfile.yml
@@ -13,12 +13,12 @@
 # gateways and static routes for API/object/network nodes or
 # other nodes which have legs in multiple networks.
 #
-# API/obj node SELinux is also disabled. That is not related to
+# API/o/c node SELinux is also disabled. That is not related to
 # the hosts file per se, it's just most optimal to do before
 # reboots.
 
 # workaround: SELinux <> rabbitmq HiPE compilation, httpd, haproxy..
-- hosts: api:obj
+- hosts: api:obj:compute
   become: yes
   become_user: root
   gather_facts: no
