--- a/playbooks/post_puppetize_apis.yml
+++ b/playbooks/post_puppetize_apis.yml
@@ -18,13 +18,17 @@
       shell: sed -i 's/native/ldap/' /etc/openstack-dashboard/local_settings
 #workaround: For the time being, don't use vanilla scripts for tenant creation and mapping
     - name: Create non-admin test project
-      shell: openstack project create testgroup --domain Default
+      shell: source /root/openrc.admintoken; openstack project create testgroup --domain Default
+      ignore_errors: true
     - name: Grant member role to test project
-      shell: openstack role add --project-domain Default --project testgroup --group testgroup member
+      shell: source /root/openrc.admintoken; openstack role add --project-domain Default --project testgroup --group testgroup member
+      ignore_errors: true
     - name: Grant object role to test project
-      shell: openstack role add --project-domain Default --project testgroup --group testgroup object_store_user
+      shell: source /root/openrc.admintoken; openstack role add --project-domain Default --project testgroup --group testgroup object_store_user
+      ignore_errors: true
     - name: Grant admin role to service project
-      shell: openstack role add --project-domain Default --project service --group service admin
+      shell: source /root/openrc.admintoken; openstack role add --project-domain Default --project service --group service admin
+      ignore_errors: true
 #bonus! create openrc
     - name: Create testuser openrc header
       shell: echo "#!/usr/bin/env bash" > "{{ testuser_openrc }}"
