--- a/playbooks/pre_puppetize_apis.yml
+++ b/playbooks/pre_puppetize_apis.yml
@@ -12,14 +12,16 @@
       args:
         creates: /usr/bin/pip-python
 # workaround: Preinstall openstack CLI
-    - name: Preinstall openstack CLI - Newton repo
-      yum:
-        name: centos-release-openstack-newton
+    - shell: yum list installed python-openstackclient
+      register: pkg
+      ignore_errors: true
+    - yum:
+        name: "{{ item }}"
         state: present
-    - name: Preinstall openstack CLI
-      yum:
-        name: python-openstackclient
-        state: present
+      with_items:
+        - centos-release-openstack-newton
+        - python-openstackclient
+      when: pkg.rc != 0
     - name: Use insecure in all /bin/openstack calls due to self-signed cert
       lineinfile:
         path: /bin/openstack
