--- a/playbooks/puppetize_compute.yml
+++ b/playbooks/puppetize_compute.yml
@@ -8,7 +8,7 @@
         name: "{{ item }}"
         state: present
       with_items:
-        - centos-release-openstack-newton.noarch
+#        - centos-release-openstack-newton.noarch
         - unzip
         - ksh
         - libmcrypt
