--- a/playbooks/puppetize_compute.yml
+++ b/playbooks/puppetize_compute.yml
@@ -4,11 +4,24 @@
   become_user: root
   pre_tasks:
 #workaround: Compensate for missing Spacewalk
+    - blockinfile:
+        path: /etc/yum.repos.d/rdo-release.repo
+        block: |
+          [rdo-release]
+          name=OpenStack Newton Repository
+          baseurl=http://vault.centos.org/7.4.1708/cloud/$basearch/openstack-newton/
+          enabled=1
+          gpgcheck=1
+          gpgkey=file:///etc/pki/rpm-gpg/RPM-GPG-KEY-CentOS-SIG-Cloud
+    - get_url:
+        url: https://raw.githubusercontent.com/openstack/puppet-openstack_extras/master/files/RPM-GPG-KEY-CentOS-SIG-Cloud
+        dest: /etc/pki/rpm-gpg/RPM-GPG-KEY-CentOS-SIG-Cloud
+        mode: 0644
     - yum:
         name: "{{ item }}"
         state: present
       with_items:
-#        - centos-release-openstack-newton.noarch
+        - centos-release-openstack-newton.noarch
         - unzip
         - ksh
         - libmcrypt
