--- a/playbooks/post_puppetize_apis.yml
+++ b/playbooks/post_puppetize_apis.yml
@@ -42,3 +42,29 @@
           export OS_IDENTITY_API_VERSION=3
           export OS_REGION_NAME="cloud-devel"
           export OS_INTERFACE=public
+
+- name: Install rally into puppetmaster
+  hosts: puppet
+  tags: puppet
+  become: true
+  become_user: root
+  roles:
+    - ansible-role-rally
+    - ansible-role-rally-scenarios
+      clouds:
+        testcloud:
+          - region: cloud-devel
+          - endpoint: api-node0:5000/v2.0/
+          - adminuser: rally-admin
+          - adminpassword: "{{ vault_rally-admin_password }}"
+          - admin_project_name: adminproject
+          - admin_domain_name: Default
+          - admin_project_domain_name: Default
+          - username: rally
+          - userpassword: "{{ vault_rally_password }}"
+          - user_project_name: rally
+          - user_domain_name: Default
+          - user_project_domain_name: Default
+          - network_name: rally_network
+          - tempest_extra_settings: []
+          - tempest_skip_tests: {}
