--- a/playbooks/post_puppetize_apis.yml
+++ b/playbooks/post_puppetize_apis.yml
@@ -53,18 +53,19 @@
     - role: ansible-role-rally-scenarios
       clouds:
         testcloud:
-          - region: cloud-devel
-          - endpoint: api-node0:5000/v2.0/
-          - adminuser: rally-admin
-          - adminpassword: "{{ vault_rally_admin_password }}"
-          - admin_project_name: rally
-          - admin_domain_name: service
-          - admin_project_domain_name: service
-          - username: rally
-          - userpassword: "{{ vault_rally_password }}"
-          - user_project_name: rally
-          - user_domain_name: service
-          - user_project_domain_name: service
-          - network_name: rally_network
-          - tempest_extra_settings: []
-          - tempest_skip_tests: {}
+          region: cloud-devel
+          endpoint: api-node0:5000/v2.0/
+          adminuser: rally-admin
+          adminpassword: "{{ vault_rally_admin_password }}"
+          admin_project_name: rally
+          admin_domain_name: service
+          admin_project_domain_name: service
+          username: rally
+          userpassword: "{{ vault_rally_password }}"
+          user_project_name: rally
+          user_domain_name: service
+          user_project_domain_name: service
+          network_name: rally_network
+          tempest_extra_settings: []
+          tempest_skip_tests: {}
+          tempest_cirros_download_url: http://mirror.noris.net/cirros/0.3.5/cirros-0.3.5-x86_64-disk.img
