Install rally to 1st api node
On 2nd though this might be a better home for now.

--- a/playbooks/post_puppetize_apis.yml
+++ b/playbooks/post_puppetize_apis.yml
@@ -44,8 +44,7 @@
           export OS_INTERFACE=public
 
 - name: Install rally into puppetmaster
-  hosts: puppet
-  tags: puppet
+  hosts: api-node0
   become: true
   become_user: root
   roles:
