Add hiera-yaml pinning
Yeah, this is needed regardless if the version is set.

--- a/inventory/host_vars/puppet-node/vars.yml
+++ b/inventory/host_vars/puppet-node/vars.yml
@@ -3,3 +3,4 @@ puppet_environments_repo: "{{ vault_puppet_environments_repo }}"
 ruby_gems_versions:
   - { gem: 'puppet_forge', version: '2.2.6' }
   - { gem: 'r10k', version: '2.2.2' }
+  - { gem: 'hiera-eyaml', version: '' }
