--- a/playbooks/puppetize_apis_loop.yml
+++ b/playbooks/puppetize_apis_loop.yml
@@ -17,5 +17,9 @@
       shell: ln -s /usr/bin/pip /usr/bin/pip-python
       args:
         creates: /usr/bin/pip-python
+    - name: Add CA to CA bundle
+      shell: cat /etc/pki/rsyslog/ca.crt >> /etc/pki/ca-trust/extracted/openssl/ca-bundle.trust.crt
+    - name: Add CA to CA bundle
+      shell: cat /etc/pki/rsyslog/ca.crt >> /etc/pki/ca-trust/extracted/pem/tls-ca-bundle.pem
   roles:
     - { role: ansible-role-puppetize, ansible_fqdn: "{{inventory_hostname_short}}.openstacklocal" }
