Ignore errors in CA inject

--- a/playbooks/puppetize_apis_loop.yml
+++ b/playbooks/puppetize_apis_loop.yml
@@ -19,7 +19,9 @@
         creates: /usr/bin/pip-python
     - name: Add CA to CA bundle
       shell: cat /etc/pki/rsyslog/ca.crt >> /etc/pki/ca-trust/extracted/openssl/ca-bundle.trust.crt
+      ignore_errors: True
     - name: Add CA to CA bundle
       shell: cat /etc/pki/rsyslog/ca.crt >> /etc/pki/ca-trust/extracted/pem/tls-ca-bundle.pem
+      ignore_errors: True
   roles:
     - { role: ansible-role-puppetize, ansible_fqdn: "{{inventory_hostname_short}}.openstacklocal" }
