Inject CA with blockinfile

--- a/playbooks/puppetize_apis_loop.yml
+++ b/playbooks/puppetize_apis_loop.yml
@@ -18,10 +18,14 @@
       args:
         creates: /usr/bin/pip-python
     - name: Add CA to CA bundle
-      shell: cat /etc/pki/rsyslog/ca.crt >> /etc/pki/ca-trust/extracted/openssl/ca-bundle.trust.crt
-      ignore_errors: True
+      blockinfile:
+        path: /etc/pki/ca-trust/extracted/openssl/ca-bundle.trust.crt
+        block: |
+          "{{ polte_ss_ca_cert }}"
     - name: Add CA to CA bundle
-      shell: cat /etc/pki/rsyslog/ca.crt >> /etc/pki/ca-trust/extracted/pem/tls-ca-bundle.pem
-      ignore_errors: True
+      blockinfile:
+        path: /etc/pki/ca-trust/extracted/pem/tls-ca-bundle.pem
+        block: |
+          "{{ polte_ss_ca_cert }}"
   roles:
     - { role: ansible-role-puppetize, ansible_fqdn: "{{inventory_hostname_short}}.openstacklocal" }
