--- a/playbooks/post_puppetize_apis.yml
+++ b/playbooks/post_puppetize_apis.yml
@@ -65,7 +65,7 @@
           user_domain_name: service
           user_project_domain_name: service
           network_name: rally_network
-          tempest_extra_settings: []
+          tempest_extra_settings: [ disable_ssl_certificate_validation=True, ]
           tempest_skip_tests: {}
           tempest_cirros_download_url: http://mirror.noris.net/cirros/0.3.5/cirros-0.3.5-x86_64-disk.img
       environment: "{{ proxy_env }}"
