Pin rally to stable/0.12

--- a/playbooks/post_puppetize_apis.yml
+++ b/playbooks/post_puppetize_apis.yml
@@ -48,7 +48,8 @@
   become: true
   become_user: root
   roles:
-    - ansible-role-rally
+    - role: ansible-role-rally
+      rally_install_version: "stable/0.12"
     - role: ansible-role-rally-scenarios
       clouds:
         testcloud:
