Configure nova/glance/neutron with a CA after puppetize

--- a/playbooks/puppetize_apis_loop.yml
+++ b/playbooks/puppetize_apis_loop.yml
@@ -29,3 +29,22 @@
           {{ polte_ss_ca_cert }}
   roles:
     - { role: ansible-role-puppetize, ansible_fqdn: "{{inventory_hostname_short}}.openstacklocal" }
+  post_tasks:
+    - name: Add CAs
+      lineinfile:
+        path: "/etc/nova/{{ item }}.conf"
+        insertafter: [keystone_authtoken]
+        line: cafile=/etc/pki/ca-trust/extracted/openssl/ca-bundle.trust.crt
+        state: present
+      with_items:
+        - nova-api
+        - glance-api
+        - neutron
+      ignore_errors: true
+    - name: Restart services
+      shell: "systemctl restart {{ item }}"
+      with_items:
+        - openstack-nova-api
+        - openstack-glance-api
+        - neutron-server
+      ignore_errors: true
