--- a/playbooks/puppetize_apis_loop.yml
+++ b/playbooks/puppetize_apis_loop.yml
@@ -32,14 +32,14 @@
   post_tasks:
     - name: Add CAs
       lineinfile:
-        path: "/etc/nova/{{ item }}.conf"
+        path: "/etc/{{ item }}.conf"
         insertafter: [keystone_authtoken]
         line: cafile=/etc/pki/ca-trust/extracted/openssl/ca-bundle.trust.crt
         state: present
       with_items:
-        - nova-api
-        - glance-api
-        - neutron
+        - nova/nova
+        - glance/glance-api
+        - neutron/neutron
       ignore_errors: true
     - name: Restart services
       shell: "systemctl restart {{ item }}"
