Make .conf edit lineinfile more specific

--- a/playbooks/puppetize_apis_loop.yml
+++ b/playbooks/puppetize_apis_loop.yml
@@ -33,7 +33,7 @@
     - name: Add CAs
       lineinfile:
         path: "/etc/{{ item }}.conf"
-        insertafter: [keystone_authtoken]
+        insertafter: "^[keystone_authtoken]"
         line: cafile=/etc/pki/ca-trust/extracted/openssl/ca-bundle.trust.crt
         state: present
       with_items:
