--- a/playbooks/puppet_environment_mods.yml
+++ b/playbooks/puppet_environment_mods.yml
@@ -14,9 +14,9 @@
       shell: 'sed -i "s/auth=neutron_auth)/auth=neutron_auth,verify=False)/" /etc/puppet/environments/{{puppet_environment}}/modules/cccp/files/tools/create-tenants.py'
     - name: workaround - ignore public network related errors
       shell: 'sed -i "s/python create-tenants.py/python create-tenants.py||\/bin\/true/" /etc/puppet/environments/{{puppet_environment}}/modules/cccp/templates/tools/create-tenants.sh.erb'
-    - name: workaround - PUP-7657
-      shell: sed -i "s/require 'puppet\/provider\/openstack'/require File.join(File.dirname(__FILE__),'..','..','..','..','openstacklib\/lib\/puppet\/provider\/openstack')/" "/etc/puppet/environments/{{puppet_environment}}/modules/nova/lib/puppet/provider/nova.rb"
-    - name: workaround - PUP-7657
-      shell: sed -i "s/require 'puppet\/provider\/openstack\/auth'/require File.join(File.dirname(__FILE__),'..','..','..','..','openstacklib\/lib\/puppet\/provider\/openstack\/auth')/" "/etc/puppet/environments/{{puppet_environment}}/modules/nova/lib/puppet/provider/nova.rb"
-    - name: workaround - PUP-7657
-      shell: sed -i "s/require 'puppet\/provider\/openstack\/credentials'/require File.join(File.dirname(__FILE__),'..','..','..','..','openstacklib\/lib\/puppet\/provider\/openstack\/credentials')/" "/etc/puppet/environments/{{puppet_environment}}/modules/nova/lib/puppet/provider/nova.rb"
+    - name: Point nova to SS CA
+      shell: sed -i "/nova_config\ \{/a \ \ 'keystone_authtoken': value => 'cafile=/etc/pki/ca-trust/extracted/openssl/ca-bundle.trust.crt'," /etc/puppet/environments/{{puppet_environment}}/modules/cccp/manifests/profile/nova.pp
+    - name: Point glance to SS CA
+      shell: sed -i "/glance_api_config\ \{/a \ \ 'keystone_authtoken': value => 'cafile=/etc/pki/ca-trust/extracted/openssl/ca-bundle.trust.crt'," /etc/puppet/environments/{{puppet_environment}}/modules/cccp/manifests/profile/glance.pp
+    - name: Point neutron to SS CA
+      shell: sed -i "/\ \ \{/a \ \ neutron_config { 'keystone_authtoken': value => 'cafile=/etc/pki/ca-trust/extracted/openssl/ca-bundle.trust.crt', }" /etc/puppet/environments/{{puppet_environment}}/modules/cccp/manifests/profile/neutron.pp
