Glance and neutron too

--- a/playbooks/puppet_environment_mods.yml
+++ b/playbooks/puppet_environment_mods.yml
@@ -19,16 +19,13 @@
         path: "/etc/puppet/environments/{{puppet_environment}}/modules/cccp/manifests/profile/nova.pp"
         insertafter: "::nova::keystone::authtoken"
         line: "    cafile              => '/etc/pki/ca-trust/extracted/openssl/ca-bundle.trust.crt',"
-#      ignore_errors: True
     - name: Point glance to SS CA
       lineinfile:
         path: "/etc/puppet/environments/{{puppet_environment}}/modules/cccp/manifests/profile/glance.pp"
-        insertafter: glance_api_config {
-        line: "    'keystone_authtoken/cafile': value => '/etc/pki/ca-trust/extracted/openssl/ca-bundle.trust.crt';"
-#      ignore_errors: True
+        insertafter: "::glance::api::authtoken"
+        line: "    cafile              => '/etc/pki/ca-trust/extracted/openssl/ca-bundle.trust.crt',"
     - name: Point neutron to SS CA
       lineinfile:
         path: "/etc/puppet/environments/{{puppet_environment}}/modules/cccp/manifests/profile/neutron.pp"
-        insertafter: "  }"
-        line: "  neutron_config { 'keystone_authtoken/cafile': value => '/etc/pki/ca-trust/extracted/openssl/ca-bundle.trust.crt'; }"
-#      ignore_errors: True
+        insertafter: "::neutron::keystone::authtoken"
+        line: "    cafile              => '/etc/pki/ca-trust/extracted/openssl/ca-bundle.trust.crt',"
