Change --insecure injection to root env var

--- a/playbooks/puppetize_apis_loop.yml
+++ b/playbooks/puppetize_apis_loop.yml
@@ -7,16 +7,15 @@
   pre_tasks:
     - name: Flush firewall rules for bootstrap - Puppetize will reinstate them
       shell: iptables -F
-    - name: Use insecure in all /bin/openstack calls due to self-signed cert
-      lineinfile:
-        path: /bin/openstack
-        insertafter: import\ sys
-        line: "sys.argv.append('--insecure')"
-      ignore_errors: True
     - name: Link pip-python to pip
       shell: ln -s /usr/bin/pip /usr/bin/pip-python
       args:
         creates: /usr/bin/pip-python
+    - name: Add CA to root bashrc
+      lineinfile:
+        path: /root/.bashrc
+        insertafter: EOF
+        line: export OS_CACERT=/etc/keystone/ssl/certs/ca.pem
     - name: Add CA to CA bundle
       blockinfile:
         path: /etc/pki/ca-trust/extracted/openssl/ca-bundle.trust.crt
