--- a/playbooks/puppetize_apis_loop.yml
+++ b/playbooks/puppetize_apis_loop.yml
@@ -11,9 +11,9 @@
       shell: ln -s /usr/bin/pip /usr/bin/pip-python
       args:
         creates: /usr/bin/pip-python
-    - name: Add CA to root bashrc
+    - name: Add CA to environment
       lineinfile:
-        path: /root/.bashrc
+        path: /etc/environment
         insertafter: EOF
         line: export OS_CACERT=/etc/keystone/ssl/certs/ca.pem
     - name: Add CA to CA bundle
