--- a/playbooks/build-heat-stack.yml
+++ b/playbooks/build-heat-stack.yml
@@ -24,84 +24,8 @@
 
     # In the next task, addresses[0] or addresses.0 did not
     # work for some reason.
-    - debug: msg="{{ heat_stack.stack.outputs[1].output_value[0].addresses.keys()[0] }}"
+    - debug: msg="{{ heat_stack.stack.outputs[0].output_value[0].addresses.keys()[0] }}"
       register: magic_index_network
-
-    - name: Add Galera nodes to inventory
-      add_host:
-        name: "{{ item.name }}"
-        groups: "{{ item.metadata.ansible_group }}"
-        ansible_ssh_host: "{{ item.addresses[magic_index_network.msg][0].addr }}"
-        ansible_ssh_user: "{{ vm_user_account }}"
-      no_log: yes
-      with_items:
-        - "{{ heat_stack.stack.outputs[0].output_value }}"
-        - "{{ heat_stack.stack.outputs[1].output_value }}"
-        - "{{ heat_stack.stack.outputs[2].output_value }}"
-        - "{{ heat_stack.stack.outputs[3].output_value }}"
-        - "{{ heat_stack.stack.outputs[4].output_value }}"
-        - "{{ heat_stack.stack.outputs[5].output_value }}"
-        - "{{ heat_stack.stack.outputs[6].output_value }}"
-        - "{{ heat_stack.stack.outputs[7].output_value }}"
-        - "{{ heat_stack.stack.outputs[8].output_value }}"
-      when: item.metadata is defined and item.metadata.ansible_group == "galera"
-
-    - name: Add api nodes to inventory
-      add_host:
-        name: "{{ item.name }}"
-        groups: "{{ item.metadata.ansible_group }}"
-        ansible_ssh_host: "{{ item.addresses[magic_index_network.msg][0].addr }}"
-        ansible_ssh_user: "{{ vm_user_account }}"
-      no_log: yes
-      with_items:
-        - "{{ heat_stack.stack.outputs[0].output_value }}"
-        - "{{ heat_stack.stack.outputs[1].output_value }}"
-        - "{{ heat_stack.stack.outputs[2].output_value }}"
-        - "{{ heat_stack.stack.outputs[3].output_value }}"
-        - "{{ heat_stack.stack.outputs[4].output_value }}"
-        - "{{ heat_stack.stack.outputs[5].output_value }}"
-        - "{{ heat_stack.stack.outputs[6].output_value }}"
-        - "{{ heat_stack.stack.outputs[7].output_value }}"
-        - "{{ heat_stack.stack.outputs[8].output_value }}"
-      when: item.metadata is defined and item.metadata.ansible_group == "api"
-
-    - name: Add obj nodes to inventory
-      add_host:
-        name: "{{ item.name }}"
-        groups: "{{ item.metadata.ansible_group }}"
-        ansible_ssh_host: "{{ item.addresses[magic_index_network.msg][0].addr }}"
-        ansible_ssh_user: "{{ vm_user_account }}"
-      no_log: yes
-      with_items:
-        - "{{ heat_stack.stack.outputs[0].output_value }}"
-        - "{{ heat_stack.stack.outputs[1].output_value }}"
-        - "{{ heat_stack.stack.outputs[2].output_value }}"
-        - "{{ heat_stack.stack.outputs[3].output_value }}"
-        - "{{ heat_stack.stack.outputs[4].output_value }}"
-        - "{{ heat_stack.stack.outputs[5].output_value }}"
-        - "{{ heat_stack.stack.outputs[6].output_value }}"
-        - "{{ heat_stack.stack.outputs[7].output_value }}"
-        - "{{ heat_stack.stack.outputs[8].output_value }}"
-      when: item.metadata is defined and item.metadata.ansible_group == "obj"
-
-    - name: Add net nodes to inventory
-      add_host:
-        name: "{{ item.name }}"
-        groups: "{{ item.metadata.ansible_group }}"
-        ansible_ssh_host: "{{ item.addresses[magic_index_network.msg][0].addr }}"
-        ansible_ssh_user: "{{ vm_user_account }}"
-      no_log: yes
-      with_items:
-        - "{{ heat_stack.stack.outputs[0].output_value }}"
-        - "{{ heat_stack.stack.outputs[1].output_value }}"
-        - "{{ heat_stack.stack.outputs[2].output_value }}"
-        - "{{ heat_stack.stack.outputs[3].output_value }}"
-        - "{{ heat_stack.stack.outputs[4].output_value }}"
-        - "{{ heat_stack.stack.outputs[5].output_value }}"
-        - "{{ heat_stack.stack.outputs[6].output_value }}"
-        - "{{ heat_stack.stack.outputs[7].output_value }}"
-        - "{{ heat_stack.stack.outputs[8].output_value }}"
-      when: item.metadata is defined and item.metadata.ansible_group == "net"
 
     - name: Add Ceph mon nodes to inventory
       add_host:
@@ -114,12 +38,12 @@
         - "{{ heat_stack.stack.outputs[0].output_value }}"
         - "{{ heat_stack.stack.outputs[1].output_value }}"
         - "{{ heat_stack.stack.outputs[2].output_value }}"
-        - "{{ heat_stack.stack.outputs[3].output_value }}"
-        - "{{ heat_stack.stack.outputs[4].output_value }}"
-        - "{{ heat_stack.stack.outputs[5].output_value }}"
-        - "{{ heat_stack.stack.outputs[6].output_value }}"
-        - "{{ heat_stack.stack.outputs[7].output_value }}"
-        - "{{ heat_stack.stack.outputs[8].output_value }}"
+#        - "{{ heat_stack.stack.outputs[3].output_value }}"
+#        - "{{ heat_stack.stack.outputs[4].output_value }}"
+#        - "{{ heat_stack.stack.outputs[5].output_value }}"
+#        - "{{ heat_stack.stack.outputs[6].output_value }}"
+#        - "{{ heat_stack.stack.outputs[7].output_value }}"
+#        - "{{ heat_stack.stack.outputs[8].output_value }}"
       when: item.metadata is defined and item.metadata.ansible_group == "cephmon"
 
     - name: Add Ceph osd nodes to inventory
@@ -133,12 +57,12 @@
         - "{{ heat_stack.stack.outputs[0].output_value }}"
         - "{{ heat_stack.stack.outputs[1].output_value }}"
         - "{{ heat_stack.stack.outputs[2].output_value }}"
-        - "{{ heat_stack.stack.outputs[3].output_value }}"
-        - "{{ heat_stack.stack.outputs[4].output_value }}"
-        - "{{ heat_stack.stack.outputs[5].output_value }}"
-        - "{{ heat_stack.stack.outputs[6].output_value }}"
-        - "{{ heat_stack.stack.outputs[7].output_value }}"
-        - "{{ heat_stack.stack.outputs[8].output_value }}"
+#        - "{{ heat_stack.stack.outputs[3].output_value }}"
+#        - "{{ heat_stack.stack.outputs[4].output_value }}"
+#        - "{{ heat_stack.stack.outputs[5].output_value }}"
+#        - "{{ heat_stack.stack.outputs[6].output_value }}"
+#        - "{{ heat_stack.stack.outputs[7].output_value }}"
+#        - "{{ heat_stack.stack.outputs[8].output_value }}"
       when: item.metadata is defined and item.metadata.ansible_group == "cephosd"
 
     - name: Add puppet node to inventory
@@ -152,51 +76,13 @@
         - "{{ heat_stack.stack.outputs[0].output_value }}"
         - "{{ heat_stack.stack.outputs[1].output_value }}"
         - "{{ heat_stack.stack.outputs[2].output_value }}"
-        - "{{ heat_stack.stack.outputs[3].output_value }}"
-        - "{{ heat_stack.stack.outputs[4].output_value }}"
-        - "{{ heat_stack.stack.outputs[5].output_value }}"
-        - "{{ heat_stack.stack.outputs[6].output_value }}"
-        - "{{ heat_stack.stack.outputs[7].output_value }}"
-        - "{{ heat_stack.stack.outputs[8].output_value }}"
+#        - "{{ heat_stack.stack.outputs[3].output_value }}"
+#        - "{{ heat_stack.stack.outputs[4].output_value }}"
+#        - "{{ heat_stack.stack.outputs[5].output_value }}"
+#        - "{{ heat_stack.stack.outputs[6].output_value }}"
+#        - "{{ heat_stack.stack.outputs[7].output_value }}"
+#        - "{{ heat_stack.stack.outputs[8].output_value }}"
       when: item.metadata is defined and item.metadata.ansible_group == "puppet"
-
-    - name: Add LDAP node to inventory
-      add_host:
-        name: "{{ item.name }}"
-        groups: "{{ item.metadata.ansible_group }}"
-        ansible_ssh_host: "{{ item.addresses[magic_index_network.msg][0].addr }}"
-        ansible_ssh_user: "{{ vm_user_account }}"
-      no_log: yes
-      with_items:
-        - "{{ heat_stack.stack.outputs[0].output_value }}"
-        - "{{ heat_stack.stack.outputs[1].output_value }}"
-        - "{{ heat_stack.stack.outputs[2].output_value }}"
-        - "{{ heat_stack.stack.outputs[3].output_value }}"
-        - "{{ heat_stack.stack.outputs[4].output_value }}"
-        - "{{ heat_stack.stack.outputs[5].output_value }}"
-        - "{{ heat_stack.stack.outputs[6].output_value }}"
-        - "{{ heat_stack.stack.outputs[7].output_value }}"
-        - "{{ heat_stack.stack.outputs[8].output_value }}"
-      when: item.metadata is defined and item.metadata.ansible_group == "ldap"
-
-    - name: Add computes node to inventory
-      add_host:
-        name: "{{ item.name }}"
-        groups: "{{ item.metadata.ansible_group }}"
-        ansible_ssh_host: "{{ item.addresses[magic_index_network.msg][0].addr }}"
-        ansible_ssh_user: "{{ vm_user_account }}"
-      no_log: yes
-      with_items:
-        - "{{ heat_stack.stack.outputs[0].output_value }}"
-        - "{{ heat_stack.stack.outputs[1].output_value }}"
-        - "{{ heat_stack.stack.outputs[2].output_value }}"
-        - "{{ heat_stack.stack.outputs[3].output_value }}"
-        - "{{ heat_stack.stack.outputs[4].output_value }}"
-        - "{{ heat_stack.stack.outputs[5].output_value }}"
-        - "{{ heat_stack.stack.outputs[6].output_value }}"
-        - "{{ heat_stack.stack.outputs[7].output_value }}"
-        - "{{ heat_stack.stack.outputs[8].output_value }}"
-      when: item.metadata is defined and item.metadata.ansible_group == "compute"
 
     - name: Generate an inventory file
       template: src=templates/ooo_inventory.j2 dest="../inventory/ooo_inventory"
