Retry the Floating IP with ext on eth0

--- a/files/api-node.yaml
+++ b/files/api-node.yaml
@@ -56,6 +56,17 @@ resources:
             $nameservers: { get_param: cloud_init_nameservers }
           template: { get_file: user-data-api.yaml }
 
+  api_public_ip:
+    type: OS::Nova::FloatingIP
+    properties:
+      pool: { get_param: floating_ip_pool }
+
+  api_floating_ip_association:
+    type: OS::Nova::FloatingIPAssociation
+    properties:
+      floating_ip: { get_resource: api_public_ip }
+      server_id: { get_resource: api_node }
+
 outputs:
   show:
     value: {get_attr: [api_node, show]}
